# DubinsCars

./: .gitignore  .htmlhintrc  .markdownlint.yaml  .pre-commit-config.yaml  .stylelintrc.json  .yamllint.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.ps1  run.sh
.github/workflows/: ci.yml  claude-review.yml  claude.yml  release-branch-guard.yml  release.yml
docs/design/: 2026-07-17-dubins-demo-design.md
docs/specs/: 2026-07-17-dubins-demo-spec.md
dubins_demo/: __init__.py  __main__.py
dubins_demo/core/: __init__.py  angles.py  dubins.py  model.py
dubins_demo/help/: index.html  style.css
dubins_demo/persistence/: __init__.py  scenario_io.py
dubins_demo/tests/: test_angles.py  test_dubins.py  test_easydubins_cross.py  test_model.py  test_placeholder.py  test_scenario_io.py
dubins_demo/ui/: __init__.py  app.py  details_panel.py  input_panel.py  plot_canvas.py  theme.py
