[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dubins-demo"
version = "0.1.0"
description = "Desktop app to compute and demonstrate Dubins paths (Tkinter + matplotlib + numpy)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "David Wies" }]
dependencies = ["numpy", "matplotlib", "sv-ttk"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.15", "pre-commit>=4", "pyright>=1.1.411"]

# This is a desktop application, not a library. The launcher below is the
# intended entry point; ``python -m dubins_demo`` remains equivalent.
[project.gui-scripts]
dubins-demo = "dubins_demo.__main__:main"

[tool.setuptools.packages.find]
include = ["dubins_demo*"]

[tool.setuptools.package-data]
"dubins_demo" = ["help/*.html", "help/*.css"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["dubins_demo"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "N",   # pep8-naming
]
ignore = [
  "E501", # line length is enforced by the formatter, not worth a second opinion
]

[tool.ruff.lint.isort]
known-first-party = ["dubins_demo"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["dubins_demo"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["dubins_demo/tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
